# IoT-Smart-Gateway

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile-launch  LICENSE  README.md  docker-compose.yml  package.yaml
TEMPLATES/: bug_report.md  feature_request.md
src/: coap-client.cpp  coap-server.cpp  coap-server.hpp  http-server.cpp  http-server.hpp  source.cpp
src/clib/: global_timer.hpp  observation_module.hpp  session_manager.hpp  simple_signal.hpp
src/http/: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  asio_compatibility.hpp  client_http.hpp  client_https.hpp  crypto.hpp  http_examples.cpp  https_examples.cpp  mutex.hpp  server_http.hpp  server_https.hpp  utility.hpp
src/http/docs/: Doxyfile  benchmarks.md
src/http/paper/: paper.bib  paper.md
src/http/tests/: CMakeLists.txt  assert.hpp  crypto_test.cpp  io_test.cpp  parse_test.cpp  status_code_test.cpp
src/http/tests/fuzzers/: README.md  http_header_field_value_semicolon_separated_attributes_parse.cpp  http_header_parse.cpp  percent_decode.cpp  query_string_parse.cpp  request_message_parse.cpp  response_message_parse.cpp
src/http/web/: index.html  test.html
web/: .chart.js.swp  add-new-post.html  backup.json  chart.js  devices.html  errors.html  form-components.html  index.html  tables.html
web/styles/: extras.1.1.0.min.css
